--- a/src/scss/_NavigationMain.scss
+++ b/src/scss/_NavigationMain.scss
@@ -2,7 +2,7 @@
   height: 60px;
 
   //width: 100%;
-  margin: 15px 0px;
+  margin: 5px 0px;
   //border: hotpink 2px solid;
 
 
@@ -10,6 +10,8 @@
 
   position: sticky;
   top: 0;
+  background-color: white;
+  z-index: 10;
 };
 
 
