--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,5 +7,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap');
 
-@import "App";
-@import "NavigationMain";
+@import "_App";
+@import "_Header.css";
+@import "_NavigationMain";
+@import "_WhyChoose.css";
+
