--- a/src/scss/_Footer.scss
+++ b/src/scss/_Footer.scss
@@ -12,6 +12,9 @@
 
     display: flex;
     flex-direction: column;
+
+    @media (min-width: 992px) {
+        max-width: 1440px;}
 }
 
 .footer__wrapLogo {
