--- a/src/scss/_WhyChoose.scss
+++ b/src/scss/_WhyChoose.scss
@@ -10,6 +10,10 @@
     display: flex;
     flex-direction: column;
     /*align-content: center;*/
+
+
+    @media (min-width: 992px) {
+        max-width: 1440px;}
 }
 
 .whyChoose__text{
