--- a/src/scss/_Footer.scss
+++ b/src/scss/_Footer.scss
@@ -12,21 +12,87 @@
 
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-content: center;
 
     @media (min-width: 992px) {
-        max-width: 1440px;}
+        max-width: 1440px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 20px 60px;
+        border: hotpink 2px solid;
+    }
 }
 
 .footer__wrapLogo {
    margin: 20px 0px;
+    border: gold 2px solid;
+
+    @media (min-width: 992px) {
+        order: 1;
+        width: 25%;
+        align-self: flex-start;
+        justify-self: flex-start;
+        margin: 0;
+        padding: 0;
+    }
+
+}
+
+.footer__wrapIcons {
+    display: flex;
+    border: crimson 2px solid;
+    justify-content: center;
+
+    @media (min-width: 992px) {
+        order: 4;
+        width: 25%;
+        align-self: flex-start;
+        justify-self: flex-start;
+        margin: 0;
+        padding: 0;
+    }
+
+}
+
+.footer__wrapFooterNavigation {
+    border: deepskyblue 2px solid;
+
+    @media (min-width: 992px) {
+        order: 2;
+        width: 40%;
+        //flex-grow: 1;
+        margin: 0;
+        padding: 0;
+    }
 
 }
 
 .footer__btnRequestInvite {
     align-self: center;
     margin: 20px 0px;
+    border: orange 2px solid;
+
+    @media (min-width: 992px) {
+        order: 3;
+        width: 25%;
+        align-self: flex-start;
+        justify-self: flex-end;
+        margin: 0;
+        padding: 0;
+    }
 }
 
 .footer__infoCopy {
     margin: 20px 0px;
+    border: blueviolet 2px solid;
+
+    @media (min-width: 992px) {
+        order: 5;
+        width: 25%;
+        align-self: flex-start;
+        justify-self: flex-end;
+        margin: 0;
+        padding: 0;
+    }
 }
