--- a/src/scss/_LatestArticles.scss
+++ b/src/scss/_LatestArticles.scss
@@ -16,6 +16,9 @@
 
     @media (min-width: 992px) {
         max-width: 1440px;}
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0px 60px;
 }
 
 .latestArticles__text{
@@ -23,6 +26,15 @@
     max-width: 500px;
     /*border: olivedrab solid 2px;*/
     align-self: center;
+
+    @media (min-width: 992px) {
+        max-width: 1440px;
+        width: 100%;
+        align-self: flex-start;
+        flex-grow: 1;
+        text-align: left;
+        margin: 40px 20px 0px 20px;
+    }
 }
 
 
@@ -32,12 +44,21 @@
     margin: 20px 20px;
     padding-bottom: 40px;
     max-width: 500px;
-    /*border: cornflowerblue solid 2px;*/
+    //border: cornflowerblue solid 2px;
     align-self: center;
     text-align: left;
 
     background-color: white;
     border-radius: 10px;
+
+    @media (min-width: 992px) {
+        width: 20%;
+        flex-grow: 1;
+        text-align: left;
+        align-self: flex-start;
+        margin: 40px 10px;
+
+    }
 }
 
 .oneArticle__pictureWrapp {
