--- a/src/scss/_WhyChoose.scss
+++ b/src/scss/_WhyChoose.scss
@@ -14,13 +14,25 @@
 
     @media (min-width: 992px) {
         max-width: 1440px;}
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0px 60px;
+
 }
 
 .whyChoose__text{
     margin: 40px 20px;
     max-width: 500px;
-    /*border: olivedrab solid 2px;*/
+    //border: olivedrab solid 2px;
     align-self: center;
+
+    @media (min-width: 992px) {
+        max-width: 1440px;
+        width: 100%;
+        align-self: flex-start;
+        flex-grow: 1;
+        text-align: left;
+    }
 }
 
 .whyChoose__title {
@@ -29,6 +41,9 @@
 
 .whyChoose__paragraph {
     margin-top: 20px;
+    @media (min-width: 992px) {
+        width: 55%;
+    }
 }
 
 
@@ -37,8 +52,17 @@
 .benefit {
     margin: 40px 20px;
     max-width: 500px;
-    /*border: cornflowerblue solid 2px;*/
+    //border: cornflowerblue solid 2px;
     align-self: center;
+
+    @media (min-width: 992px) {
+        width: 22%;
+        flex-grow: 1;
+        text-align: left;
+        align-self: flex-start;
+        margin: 40px 10px;
+
+    }
 }
 
 .benefit__title {
