--- a/src/scss/_FooterNavigation.scss
+++ b/src/scss/_FooterNavigation.scss
@@ -17,8 +17,9 @@
 
         flex-direction: row;
         flex-wrap: wrap;
-        margin: 0;
+        margin: 0 40px 0 40px;
         padding: 0;
+        text-align: left;
 
     }
 }
@@ -33,7 +34,7 @@
     @media (min-width: 992px) {
         width: 50%;
             margin: 0;
-            padding: 0 0 10px 0;
+            padding: 0 0 20px 20px;
 
 
 
