--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -8,6 +8,7 @@
     margin: 0 auto;
     overflow: hidden;
 
+
     display: flex;
     flex-direction: column;
 
@@ -18,12 +19,19 @@
 
         flex-direction: reverse;
 
-        background: hsl(0, 0%, 98%) url("../img/bg-intro-desktop.svg") no-repeat bottom ;
+        background: hsl(0, 0%, 98%) url("../img/bg-intro-desktop.svg") no-repeat ;
         //background-size: 80%;
+        background-position-x: right;
+        background-position-y: -100px;
+        background-size: contain;
 
         position: relative;
-        overflow-y: visible;
-        overflow-x: hidden;
+
+        //overflow-y: visible;
+        //overflow-x: hidden;
+        overflow: visible;
+
+
 
     }
 
@@ -43,7 +51,9 @@
         position: absolute;
         left: 55%;
         top: -40px;
-        overflow: visible;
+        overflow-y: auto;
+        //overflow-x: auto;
+        z-index: 2;
 
     }
 
@@ -66,7 +76,7 @@
 margin: 20px;
 
     max-width: 500px;
-    //border: cornflowerblue solid 2px;
+    border: cornflowerblue solid 2px;
     align-self: center;
 
 
