--- a/src/scss/_LatestArticles.scss
+++ b/src/scss/_LatestArticles.scss
@@ -11,7 +11,8 @@
 
     display: flex;
     flex-direction: column;
-/*align-content: center;*/
+    align-content: center;
+    justify-content: center;
 
 
     @media (min-width: 992px) {
@@ -19,6 +20,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     padding: 0px 60px;
+
 }
 
 .latestArticles__text{
@@ -46,17 +48,20 @@
     max-width: 500px;
     //border: cornflowerblue solid 2px;
     align-self: center;
-    text-align: left;
+    text-align: center;
 
     background-color: white;
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 
     @media (min-width: 992px) {
         width: 20%;
         flex-grow: 1;
         text-align: left;
-        align-self: flex-start;
-        margin: 40px 10px;
+        align-self: stretch;
+        margin: 40px 10px ;
+        padding-bottom: 20px;
+
 
     }
 }
@@ -65,7 +70,17 @@
     overflow: hidden;
     margin: 0 auto;
     /*width: 100%;*/
-    border-radius: 10px;
+
+    max-width: 500px;
+    //max-height: 333px;
+    height: 300px;
+
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
+    @media (min-width: 992px) {
+        height: 200px;
+    }
 
 
 //align-self: center;
@@ -73,11 +88,14 @@
 
 .oneArticle__picture {
     width: 100%;
+    //height: 20vh;
+    height: 100%;
+    object-fit: cover;
 }
 
 .oneArticle__title {
-    margin: 20px 0;
-    font-size: 24px;
+    margin: 20px 30px;
+    font-size: 20px;
     cursor: pointer;
 }
 
@@ -91,12 +109,12 @@
     font-size: 12px;
 }
 
-.oneArticle__title {
-    margin: 0px 30px;
-    font-size: 20px;
-
-}
 
 .oneArticle__text {
     margin: 10px 30px;
+
+    @media (min-width: 992px) {
+        justify-self: stretch;
+        flex-grow: 1;
+    }
 }
