--- a/src/scss/_WhyChoose.scss
+++ b/src/scss/_WhyChoose.scss
@@ -7,9 +7,12 @@
 
     background-color: hsl(220, 16%, 96%);
 
+
+
     display: flex;
     flex-direction: column;
-    /*align-content: center;*/
+    align-content: center;
+    justify-content: center;
 
 
     @media (min-width: 992px) {
