--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -81,7 +81,7 @@
 margin: 20px;
 
     max-width: 500px;
-    border: cornflowerblue solid 2px;
+    //border: cornflowerblue solid 2px;
     align-self: center;
 
 
@@ -89,7 +89,7 @@ margin: 20px;
         align-self: flex-start;
         width: 100%;
         flex-grow: 1;
-        padding-left: 60px;
+        padding-left: 80px;
         margin-top: 120px;
         margin-bottom: 100px;
         padding-right: 10px;
