--- a/src/scss/_WhyChoose.scss
+++ b/src/scss/_WhyChoose.scss
@@ -11,16 +11,18 @@
 
     display: flex;
     flex-direction: column;
+
     align-content: center;
     justify-content: center;
 
 
     @media (min-width: 992px) {
-        max-width: 1440px;}
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 0px 60px;
-
+        max-width: 1440px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 0px 80px;
+        justify-content: space-between;
+    }
 }
 
 .whyChoose__text{
@@ -28,6 +30,7 @@
     max-width: 500px;
     //border: olivedrab solid 2px;
     align-self: center;
+    justify-self: center;
 
     @media (min-width: 992px) {
         max-width: 1440px;
@@ -57,13 +60,15 @@
     max-width: 500px;
     //border: cornflowerblue solid 2px;
     align-self: center;
+    justify-self: center;
 
     @media (min-width: 992px) {
-        width: 22%;
-        flex-grow: 1;
+        width: 23%;
+        //flex-grow: 1;
         text-align: left;
-        align-self: flex-start;
-        margin: 40px 10px;
+        align-self: stretch;
+        margin: 40px 0px;
+
 
     }
 }
