--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,11 +8,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap');
 
 @import "_App";
+@import "_BasicStyle";
 @import "_Footer";
 @import "_FooterIcons";
 @import "_FooterNavigation";
 @import "_Header";
 @import "_LatestArticles";
 @import "_NavigationMain";
+@import "_NavigationMainBig";
+@import "_NavigationMainSmall";
 @import "_WhyChoose";
 
