wip refactor NavigationMain

--- a/src/scss/_NavigationMainSmall.scss
+++ b/src/scss/_NavigationMainSmall.scss
@@ -50,6 +50,6 @@
 
 
 }
-.navigation__link--small:hover {
+.navigation__li--small:hover .navigation__link--small{
   color: hsl(136, 65%, 51%) ;
 };
