--- a/src/scss/_NavigationMain.scss
+++ b/src/scss/_NavigationMain.scss
@@ -1,53 +1,40 @@
 .navigation {
   height: 60px;
-
-  //width: 100%;
-  //margin: 5px auto 0px auto;
-  //margin: 0 auto;
-  //flex-grow: 4;
   align-self: center;
-  //justify-self: center;
   width: 100%;
-
-  //border: hotpink 2px solid;
   max-width: 900px;
-
-
   display: flex;
-
+  // center lepszy zamiast marginów, jest wycentrowane
+  align-items: center;
   position: sticky;
   top: 0;
   background-color: white;
   z-index: 10;
-
-
   @media (min-width: 992px) {
     max-width: 1440px;
-   padding: 0px 60px}
+    padding: 0px 60px}
 };
 
+// TODO czemu bez zagnieżdżania? &__wrapLogo zamiast .navigation__wrapLogo
 
 .navigation__wrapLogo {
   height: 25px;
-  margin-top: 15px;
+  // margin-top: 15px;
+  // lepszy align-items: center we wraperze
   margin-left: 20px;
-  //padding: 5px 0px;
-  //margin-right: 20px;
   justify-self: flex-start;
-  //border: red 2px solid;
 }
 
 .navigation__logo {
   height: 100%;
-
 }
 
 .navigation__wrapIconNavigation {
   height: 25px;
-  margin-top: 15px;
+  //margin-top: 15px;
+  // lepszy align-items: center we wraperze
   margin-right: 20px;
   justify-self: flex-end;
-  //border: purple 2px solid;
   flex-grow: 1;
   text-align: right;
 }
@@ -56,20 +43,11 @@
   height: 100%;
 }
 
-
-
-
 .navigation__btnRequestInvite {
   @media (min-width: 992px) {
     justify-self: flex-end;
     align-self: center;
-
-
     height: 40px;
-
     margin-right: 20px;
-
-
-
   }
 }
