--- a/src/scss/_BasicStyle.scss
+++ b/src/scss/_BasicStyle.scss
@@ -2,24 +2,17 @@
   background:  linear-gradient(90deg, hsl(136, 65%, 51%) 0%, hsl(192, 70%, 51%) 100%);
   border-color: transparent;
   border-radius: 50px;
-
   height: 60px;
   width: 200px;
   padding: 0 20px;
-
   font-size: 16px;
-  //line-height: 20px;
   font-weight: bold;
   color: white;
-
-
-
   cursor: pointer;
+  transition: 0.5s;
 }
 
 .btnAll:hover {
-  /*filter: brightness(1.2);*/
-  /*opacity: 70%;*/
   background:  linear-gradient(90deg, lighten(hsl(136, 65%, 51%),10%) 0%, lighten(hsl(192, 70%, 51%),10%) 100%);
 }
 
@@ -28,7 +21,6 @@
   font-size: 16px;
   line-height: 25px;
 }
-
 
 .titleAll {
   font-size: 35px;
