--- a/src/scss/_FooterNavigation.scss
+++ b/src/scss/_FooterNavigation.scss
@@ -4,92 +4,82 @@
     @media (min-width: 992px) {
         margin: 0;
         padding: 0;
-
     }
-}
 
+    &__ul {
+        display: flex;
+        flex-direction: column;
 
-.footerNavigation__ul {
-    display: flex;
-    flex-direction: column;
-
-    @media (min-width: 992px) {
-
-        flex-direction: row;
-        flex-wrap: wrap;
-        margin: 0 40px 0 40px;
-        padding: 0;
-        text-align: left;
-        justify-content: space-between;
-
+        @media (min-width: 992px) {
+            flex-direction: row;
+            flex-wrap: wrap;
+            margin: 0 40px 0 40px;
+            padding: 0;
+            text-align: left;
+            justify-content: space-between;
+        }
     }
-}
 
+    &__li{
+        padding: 10px;
+        list-style: none;
+        cursor: pointer;
 
-.footerNavigation__li{
-    padding: 10px;
-    list-style: none;
-    //border: yellowgreen 2px solid;
-
-    cursor: pointer;
-
-    @media (min-width: 992px) {
-        width: 50%;
+        @media (min-width: 992px) {
+            width: 50%;
             margin: 0;
             padding: 0 0 0 60px;
-
-
-
+        }
     }
 
-}
+    &__link {
+        color: hsl(220, 16%, 96%);
+        text-decoration: none;
+        transition: 0.5s;
 
+        &:hover {
+            color: hsl(136, 65%, 51%);
+        }
+    }
 
+    &__liPosition0{
+        @media (min-width: 992px) {
+            order: 1;
+        }
+    }
 
-.footerNavigation__link {
-    color: hsl(220, 16%, 96%);
-    text-decoration: none;
+    &__liPosition1{
+        @media (min-width: 992px) {
+            order: 3;
+            margin-bottom: 20px;
+            margin-top: 20px;
+        }
+    }
 
+    &__liPosition2{
+        @media (min-width: 992px) {
+            order: 5;
+        }
+    }
 
-}
+    &__liPosition3{
+        @media (min-width: 992px) {
+            order: 2;
+        }
+    }
 
-.footerNavigation__link:hover {
-    color: hsl(136, 65%, 51%);
+    &__liPosition4{
+        @media (min-width: 992px) {
+            order: 4;
+            margin-bottom: 20px;
+            margin-top: 20px;
+        }
+    }
 
-}
-
-.footerNavigation__liPosition0{
-    @media (min-width: 992px) {
-        order: 1;
+    &__liPosition5{
+        @media (min-width: 992px) {
+            order: 6;
+        }
     }
 }
 
-.footerNavigation__liPosition1{
-    @media (min-width: 992px) {
-        order: 3;
-        margin-bottom: 20px;
-        margin-top: 20px;
-    }
-}
-.footerNavigation__liPosition2{
-    @media (min-width: 992px) {
-        order: 5;
-    }
-}
-.footerNavigation__liPosition3{
-    @media (min-width: 992px) {
-        order: 2;
-    }
-}
-.footerNavigation__liPosition4{
-    @media (min-width: 992px) {
-        order: 4;
-        margin-bottom: 20px;
-        margin-top: 20px;
-    }
-}
-.footerNavigation__liPosition5{
-    @media (min-width: 992px) {
-        order: 6;
-    }
-}
