--- a/src/scss/_LatestArticles.scss
+++ b/src/scss/_LatestArticles.scss
@@ -4,119 +4,98 @@
     width: 100%;
     margin: 0 auto;
     text-align: center;
-
     padding-bottom: 40px;
-
     background-color:  hsl(0, 0%, 98%);
-
     display: flex;
     flex-direction: column;
     align-content: center;
     justify-content: center;
 
-
     @media (min-width: 992px) {
         max-width: 1440px;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 0px 80px;
-    justify-content: space-between;
-    }
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 0px 80px;
+        justify-content: space-between;
+        }
 
-}
+    &__text {
+        margin: 40px 20px;
+        max-width: 500px;
+        align-self: center;
 
-.latestArticles__text{
-    margin: 40px 20px;
-    max-width: 500px;
-    /*border: olivedrab solid 2px;*/
-    align-self: center;
-
-    @media (min-width: 992px) {
-        max-width: 1440px;
-        width: 100%;
-        align-self: flex-start;
-        flex-grow: 1;
-        text-align: left;
-        margin: 40px 20px 0px 20px;
+        @media (min-width: 992px) {
+            max-width: 1440px;
+            width: 100%;
+            align-self: flex-start;
+            flex-grow: 1;
+            text-align: left;
+            margin: 40px 20px 0px 20px;
+        }
     }
 }
-
-
-
 
 .oneArticle {
     margin: 20px 20px;
     padding-bottom: 40px;
     max-width: 500px;
-    //border: cornflowerblue solid 2px;
-    align-self: center;
+     align-self: center;
     text-align: center;
-
     background-color: white;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 
     @media (min-width: 992px) {
         width: 23%;
-
         text-align: left;
         align-self: stretch;
         margin: 40px 0px ;
         padding-bottom: 20px;
+    }
 
+    &__pictureWrapp {
+        overflow: hidden;
+        margin: 0 auto;
+        max-width: 500px;
+        height: 300px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
 
+        @media (min-width: 992px) {
+            height: 220px;
+        }
+    }
+
+    &__picture {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    &__title {
+        margin: 20px 30px;
+        font-size: 20px;
+        cursor: pointer;
+        transition: 0.5s;
+
+        &:hover {
+            color: hsl(136, 65%, 51%);
+        }
+    }
+
+    &__author {
+        margin: 30px 30px 10px 30px;
+        font-size: 12px;
+    }
+
+    &__text {
+        margin: 10px 30px;
+
+        @media (min-width: 992px) {
+            justify-self: stretch;
+            flex-grow: 1;
+        }
     }
 }
 
-.oneArticle__pictureWrapp {
-    overflow: hidden;
-    margin: 0 auto;
-    /*width: 100%;*/
 
-    max-width: 500px;
-    //max-height: 333px;
-    height: 300px;
-
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-
-    @media (min-width: 992px) {
-        height: 220px;
-    }
-
-
-//align-self: center;
-}
-
-.oneArticle__picture {
-    width: 100%;
-    //height: 20vh;
-    height: 100%;
-    object-fit: cover;
-}
-
-.oneArticle__title {
-    margin: 20px 30px;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.oneArticle__title:hover {
-    color: hsl(136, 65%, 51%);
-}
-
-
-.oneArticle__author {
-    margin: 30px 30px 10px 30px;
-    font-size: 12px;
-}
-
-
-.oneArticle__text {
-    margin: 10px 30px;
-
-    @media (min-width: 992px) {
-        justify-self: stretch;
-        flex-grow: 1;
-    }
-}
