--- a/src/scss/_WhyChoose.scss
+++ b/src/scss/_WhyChoose.scss
@@ -4,17 +4,11 @@
     width: 100%;
     margin: 0 auto;
     text-align: center;
-
     background-color: hsl(220, 16%, 96%);
-
-
-
     display: flex;
     flex-direction: column;
-
     align-content: center;
     justify-content: center;
-
 
     @media (min-width: 992px) {
         max-width: 1440px;
@@ -23,58 +17,51 @@
         padding: 0px 80px;
         justify-content: space-between;
     }
-}
 
-.whyChoose__text{
-    margin: 40px 20px;
-    max-width: 500px;
-    //border: olivedrab solid 2px;
-    align-self: center;
-    justify-self: center;
+    &__text{
+        margin: 40px 20px;
+        max-width: 500px;
+        align-self: center;
+        justify-self: center;
 
-    @media (min-width: 992px) {
-        max-width: 1440px;
-        width: 100%;
-        align-self: flex-start;
-        flex-grow: 1;
-        text-align: left;
+        @media (min-width: 992px) {
+            max-width: 1440px;
+            width: 100%;
+            align-self: flex-start;
+            flex-grow: 1;
+            text-align: left;
+        }
+    }
+
+    &__title {
+        margin-top: 20px;
+    }
+
+    &__paragraph {
+        margin-top: 20px;
+
+        @media (min-width: 992px) {
+            width: 55%;
+        }
     }
 }
-
-.whyChoose__title {
-    margin-top: 20px;
-}
-
-.whyChoose__paragraph {
-    margin-top: 20px;
-    @media (min-width: 992px) {
-        width: 55%;
-    }
-}
-
-
-
 
 .benefit {
     margin: 40px 20px;
     max-width: 500px;
-    //border: cornflowerblue solid 2px;
     align-self: center;
     justify-self: center;
 
     @media (min-width: 992px) {
         width: 23%;
-        //flex-grow: 1;
         text-align: left;
         align-self: stretch;
         margin: 40px 0px;
-
-
     }
-}
 
-.benefit__title {
-    margin: 20px 0;
-    font-size: 24px;
+    &__title {
+        margin: 20px 0;
+        font-size: 24px;
+    }
 }
 
