--- a/src/scss/_FooterIcons.scss
+++ b/src/scss/_FooterIcons.scss
@@ -1,19 +1,19 @@
-.footer__wrapIcon {
-    margin: 0px 5px;
-    cursor: pointer;
-
-    &:hover {
-        color: hsl(136, 65%, 51%);
-    }
-}
-
-.footer__icon {
-    color: hsl(136, 65%, 51%);
-
-    &:hover {
-        color: hsl(136, 65%, 51%);
-    }
-}
-
-
-
+//.footer__wrapIcon {
+//    margin: 0px 5px;
+//    cursor: pointer;
+//
+//    &:hover {
+//        color: hsl(136, 65%, 51%);
+//    }
+//}
+//
+//.footer__icon {
+//    color: hsl(136, 65%, 51%);
+//
+//    &:hover {
+//        color: hsl(136, 65%, 51%);
+//    }
+//}
+//
+//
+//
