--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -1,77 +1,77 @@
-.header {
-    min-width: 375px;
-    max-width: 900px;
-    width: 100%;
-    margin: 0 auto;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    background: hsl(0, 0%, 98%) url("../img/bg-intro-mobile.svg") no-repeat right -30px;
-
-    @media (min-width: 992px) {
-        max-width: 1440px;
-        flex-direction: row;
-        background: hsl(0, 0%, 98%) url("../img/bg-intro-desktop.svg") no-repeat ;
-        background-size: auto 200%;
-        background-position: 650px -400px;
-        position: relative;
-        overflow: visible;
-    }
-
-    &__wrapIllustration {
-        overflow: hidden;
-        margin: 0 auto;
-        width: 98%;
-        align-self: center;
-
-        @media (min-width: 992px) {
-            width: 50%;
-            margin-right: 0px;
-            padding-right: 0px;
-            position: absolute;
-            right:  0;
-            top: 0;
-            overflow-y: visible;
-            z-index: 2;
-        }
-    }
-
-    &__illustration {
-        width: 100%;
-        margin-top: -120px;
-
-        @media (min-width: 992px) {
-            margin-right: -220px;
-            margin-top: -190px;
-        }
-    }
-
-    &__text {
-        margin: 20px;
-        max-width: 500px;
-        align-self: center;
-
-        @media (min-width: 992px) {
-            align-self: flex-start;
-            width: 100%;
-            flex-grow: 1;
-            padding-left: 80px;
-            margin-top: 120px;
-            margin-bottom: 100px;
-            padding-right: 10px;
-            text-align: left;
-        }
-    }
-
-    &__title {
-        margin-bottom: 20px;
-    }
-
-    &__btnRequestInvite {
-        margin: 40px 0;
-    }
-}
-
-
-
-
+//.header {
+//    min-width: 375px;
+//    max-width: 900px;
+//    width: 100%;
+//    margin: 0 auto;
+//    overflow: hidden;
+//    display: flex;
+//    flex-direction: column;
+//    background: hsl(0, 0%, 98%) url("../img/bg-intro-mobile.svg") no-repeat right -30px;
+//
+//    @media (min-width: 992px) {
+//        max-width: 1440px;
+//        flex-direction: row;
+//        background: hsl(0, 0%, 98%) url("../img/bg-intro-desktop.svg") no-repeat ;
+//        background-size: auto 200%;
+//        background-position: 650px -400px;
+//        position: relative;
+//        overflow: visible;
+//    }
+//
+//    &__wrapIllustration {
+//        overflow: hidden;
+//        margin: 0 auto;
+//        width: 98%;
+//        align-self: center;
+//
+//        @media (min-width: 992px) {
+//            width: 50%;
+//            margin-right: 0px;
+//            padding-right: 0px;
+//            position: absolute;
+//            right:  0;
+//            top: 0;
+//            overflow-y: visible;
+//            z-index: 2;
+//        }
+//    }
+//
+//    &__illustration {
+//        width: 100%;
+//        margin-top: -120px;
+//
+//        @media (min-width: 992px) {
+//            margin-right: -220px;
+//            margin-top: -190px;
+//        }
+//    }
+//
+//    &__text {
+//        margin: 20px;
+//        max-width: 500px;
+//        align-self: center;
+//
+//        @media (min-width: 992px) {
+//            align-self: flex-start;
+//            width: 100%;
+//            flex-grow: 1;
+//            padding-left: 80px;
+//            margin-top: 120px;
+//            margin-bottom: 100px;
+//            padding-right: 10px;
+//            text-align: left;
+//        }
+//    }
+//
+//    &__title {
+//        margin-bottom: 20px;
+//    }
+//
+//    &__btnRequestInvite {
+//        margin: 40px 0;
+//    }
+//}
+//
+//
+//
+//
