--- a/src/scss/_WhyChoose.scss
+++ b/src/scss/_WhyChoose.scss
@@ -1,22 +1,22 @@
 .whyChoose {
-    min-width: 375px;
-    max-width: 900px;
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-    background-color: hsl(220, 16%, 96%);
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-
-    @media (min-width: 992px) {
-        max-width: 1440px;
-        flex-direction: row;
-        flex-wrap: wrap;
-        padding: 0px 80px;
-        justify-content: space-between;
-    }
+    //min-width: 375px;
+    //max-width: 900px;
+    //width: 100%;
+    //margin: 0 auto;
+    //text-align: center;
+    //background-color: hsl(220, 16%, 96%);
+    //display: flex;
+    //flex-direction: column;
+    //align-content: center;
+    //justify-content: center;
+    //
+    //@media (min-width: 992px) {
+    //    max-width: 1440px;
+    //    flex-direction: row;
+    //    flex-wrap: wrap;
+    //    padding: 0px 80px;
+    //    justify-content: space-between;
+    //}
 
     &__text{
         margin: 40px 20px;
@@ -46,22 +46,22 @@
     }
 }
 
-.benefit {
-    margin: 40px 20px;
-    max-width: 500px;
-    align-self: center;
-    justify-self: center;
+//.benefit {
+    //margin: 40px 20px;
+    //max-width: 500px;
+    //align-self: center;
+    //justify-self: center;
+    //
+    //@media (min-width: 992px) {
+    //    width: 23%;
+    //    text-align: left;
+    //    align-self: stretch;
+    //    margin: 40px 0px;
+    //}
 
-    @media (min-width: 992px) {
-        width: 23%;
-        text-align: left;
-        align-self: stretch;
-        margin: 40px 0px;
-    }
-
-    &__title {
-        margin: 20px 0;
-        font-size: 24px;
-    }
-}
+    //&__title {
+//        margin: 20px 0;
+//        font-size: 24px;
+//    }
+//}
 
