add prettier, clean files

--- a/src/scss/_NavigationMain.scss
+++ b/src/scss/_NavigationMain.scss
@@ -12,7 +12,7 @@
 
   @media (min-width: 992px) {
     max-width: 1440px;
-    padding: 0px 60px
+    padding: 0px 60px;
   }
 
   &__wrapLogo {
@@ -32,7 +32,7 @@
     flex-grow: 1;
     text-align: right;
   }
-};
+}
 
 .iconNavigation {
   height: 100%;
