--- a/src/scss/_BasicStyle.scss
+++ b/src/scss/_BasicStyle.scss
@@ -1,5 +1,9 @@
 .btnAll {
-  background:  linear-gradient(90deg, hsl(136, 65%, 51%) 0%, hsl(192, 70%, 51%) 100%);
+  background: linear-gradient(
+    90deg,
+    hsl(136, 65%, 51%) 0%,
+    hsl(192, 70%, 51%) 100%
+  );
   border-color: transparent;
   border-radius: 50px;
   height: 60px;
@@ -12,10 +16,13 @@
   transition: 0.5s;
 
   &:hover {
-    background:  linear-gradient(90deg, lighten(hsl(136, 65%, 51%),10%) 0%, lighten(hsl(192, 70%, 51%),10%) 100%);
+    background: linear-gradient(
+      90deg,
+      lighten(hsl(136, 65%, 51%), 10%) 0%,
+      lighten(hsl(192, 70%, 51%), 10%) 100%
+    );
   }
 }
-
 
 .paragraphAll {
   color: hsl(233, 8%, 62%);
@@ -27,5 +34,3 @@
   font-size: 35px;
   font-weight: 400;
 }
-
-
