--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,17 +6,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap');
 
-@import "App";
-@import "BasicStyle";
-@import "Footer";
-@import "FooterIcons";
-@import "FooterNavigation";
-@import "Header";
-@import "LatestArticles";
-@import "NavigationMain";
-@import "NavigationMainBig";
-@import "NavigationMainSmall";
-@import "WhyChoose";
-
-
-
+@import 'App';
+@import 'BasicStyle';
+@import 'Footer';
+@import 'FooterIcons';
+@import 'FooterNavigation';
+@import 'Header';
+@import 'LatestArticles';
+@import 'NavigationMain';
+@import 'NavigationMainBig';
+@import 'NavigationMainSmall';
+@import 'WhyChoose';
